--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "4.0.0",
     "react-vis": "^1.11.7",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "d3-scale": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
