--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@vx/vx": "^0.0.199",
+    "d3-format": "^2.0.0",
+    "d3-scale": "latest",
+    "d3-time-format": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "react-vis": "^1.11.7",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4",
-    "d3-scale": "latest"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
